--- a/package.json
+++ b/package.json
@@ -9,22 +9,29 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "format": "prettier --write .",
-    "prettierlint": "prettier --check ."
+    "prettierlint": "prettier --check .",
+    "start-pwa": "ng build --prod && http-server -p 519 -c-1 dist/SkillItCode"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
+    "@angular/cdk": "~7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "~7.2.0",
+    "@angular/service-worker": "~7.2.0",
+    "@ngrx/store": "8.0.0",
     "bem": "^2.0.0",
     "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "http-server": "^0.12.3",
     "ngx-take-until-destroy": "^5.4.0",
-    "@ngrx/store": "8.0.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
