--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,5 +4,9 @@
     "outDir": "../out-tsc/app",
     "types": []
   },
-  "exclude": ["test.ts", "**/*.spec.ts"]
+  "exclude": [
+    "test.ts",
+    "**/*.spec.ts",
+    "**/*.stories.*"
+  ]
 }
